# cruct

./: .gitignore  CODE_OF_CONDUCT.md  CONTIRBUTING.md  Cargo.toml  Makefile  README.md  TESTING.md  flake.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/actions/setup/: action.yml
.github/workflows/: 010-tests.yml  020-publish.yml  overall-coverage.yml  publish.yml
cruct/: Cargo.toml
cruct/src/: lib.rs
cruct/tests/: test.rs
cruct/tests/e2e/: cli_overrides.rs  default_values.rs  env_overrides.rs  flat_nested.rs  mod.rs  nested_structs.rs  optional.rs
cruct/tests/fixtures/: test_config.json  test_config.toml  test_config.yml
cruct/tests/fixtures/e2e/: flat_nested.toml  flat_nested_defaults.toml  mixed_nested.toml  nested.toml
cruct/tests/fixtures/integration/: basic.toml  missing_flat_nested.toml  type_mismatch_flat.toml
cruct/tests/integration/: mod.rs  test_arrays.rs  test_case_insensitive.rs  test_concurrency.rs  test_error_cases.rs  test_flat_nested_errors.rs  test_loader_flow.rs  test_loading.rs  test_macro_api.rs  test_missing_field.rs  test_nested_structures.rs
cruct/tests/unit/: mod.rs  test_macro_api.rs  test_util.rs  test_validation.rs
cruct_proc/: Cargo.toml
cruct_proc/src/: fields.rs  lib.rs  parameters.rs
cruct_proc/src/generate/: fields.rs  impl_block.rs  mod.rs
cruct_proc/src/generate/tests/: mod.rs  test_fields.rs
cruct_proc/src/parse/: field_params.rs  field_struct.rs  macro_params.rs  mod.rs
cruct_proc/src/parse/tests/: mod.rs  test_field_params.rs  test_macro_params.rs  test_value_mismatch.rs
cruct_shared/: Cargo.toml
cruct_shared/src/: lib.rs
cruct_shared/src/parser/: json.rs  mod.rs  tml.rs  toml.rs  yaml.rs  yml.rs
cruct_shared/src/parser/tests/: mod.rs  option.rs  test_json.rs  test_toml.rs  test_yaml.rs
cruct_shared/src/source/: cli.rs  config.rs  file.rs  klap.rs  mod.rs
cruct_shared/src/source/tests/: mod.rs  test_merge.rs
cruct_shared/tests/: test.rs
