[package]
name = "cruct"
version = "0.1.0"
edition = "2024"

[features]
default = ["toml", "yaml", "json"]
toml = ["cruct_proc/toml", "cruct_shared/toml"]
yaml = ["cruct_proc/yaml", "cruct_shared/yaml"]
json = ["cruct_proc/json", "cruct_shared/json"]

[dependencies]
cruct_proc = { path = "../cruct_proc" }
cruct_shared = { path = "../cruct_shared" }

[dev-dependencies]
assay = "0.1.1"
tempfile = "3.19.1"
