[package]
name = "cruct"
description = "A procedural macro for loading configuration files into Rust structs with compile‑time validation and type safety."
repository = "https://github.com/FlakySL/cruct"
version = "1.0.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
keywords = ["configuration", "json", "toml", "yaml", "parsers"]
readme = "../README.md"
license = "GPL-3.0"

[features]
default = ["toml", "yaml", "json"]
toml = ["cruct_proc/toml", "cruct_shared/toml"]
yaml = ["cruct_proc/yaml", "cruct_shared/yaml"]
json = ["cruct_proc/json", "cruct_shared/json"]

[dependencies]
cruct_proc = { version = "=1.0.0", path = "../cruct_proc" }
cruct_shared = { version = "=1.0.1", path = "../cruct_shared" }

[dev-dependencies]
assay = "0.1.1"
tempfile = "3.19.1"
