[package]
name = "cruct_proc"
version = "0.1.0"
edition = "2024"

[features]
default = ["toml"]
toml = ["cruct_shared/toml"]
yaml = ["cruct_shared/yaml"]
json = ["cruct_shared/json"]

[lib]
proc-macro = true

[dependencies]
cruct_shared = { path = "../cruct_shared" }
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
thiserror = "2.0.12"
