[package]
name = "cruct_proc"
description = "Procedural macro for Cruct, enabling compile-time configuration file parsing and validation"
repository = "https://github.com/FlakySL/cruct"
version = "1.0.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
readme = "../README.md"
license = "GPL-3.0"

[features]
default = ["toml"]
toml = ["cruct_shared/toml"]
yaml = ["cruct_shared/yaml"]
json = ["cruct_shared/json"]

[lib]
proc-macro = true

[dependencies]
cruct_shared = { version = "=1.0.0", path = "../cruct_shared" }
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
thiserror = "2.0.12"
