[package]
name = "cruct_shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["toml"]
yaml = ["dep:jzon"]
toml = ["dep:toml_edit"]
json = ["dep:yaml-rust2"]

[dependencies]
thiserror = "2.0.12"

# Parsers
jzon = { version = "0.12.5", optional = true }
toml_edit = { version = "0.22.24", optional = true }
yaml-rust2 = { version = "0.10.3", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
