[package]
name = "cruct_shared"
description = "Shared library for Cruct, providing parsers and error handling"
repository = "https://github.com/FlakySL/cruct"
version = "1.0.1"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
readme = "../README.md"
license = "GPL-3.0"

[features]
default = ["toml"]
yaml = ["dep:jzon"]
toml = ["dep:toml_edit"]
json = ["dep:yaml-rust2"]

[dependencies]
thiserror = "2.0.12"

# Parsers
jzon = { version = "0.12.5", optional = true }
toml_edit = { version = "0.22.24", optional = true }
yaml-rust2 = { version = "0.10.1", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
